k8s/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meli-ingress
  namespace: meli
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
    - host: proxy.localhost
      http:
        paths:
          - path: /categories
            pathType: Prefix
            backend:
              service:
                name: proxy
                port:
                  number: 8080
          - path: /items
            pathType: Prefix
            backend:
              service:
                name: proxy
                port:
                  number: 8080
          - path: /actuator/prometheus
            pathType: Prefix
            backend:
              service:
                name: proxy
                port:
                  number: 8080

    - host: front.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front
                port:
                  number: 8082

    - host: consulta.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: consulta
                port:
                  number: 8081

    - host: prometheus.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090

    - host: grafana.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3001

    - host: mongo.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mongodb
                port:
                  number: 27018
